[package]
name = "substrate-client"
version = "1.0.0"
authors = ["Luc Gerrits <Luc.GERRITS@univ-cotedazur.fr>"]
edition = "2018"


########## import API Client ##########
# [dependencies.substrate-api-client]
# git = "https://github.com/scs/substrate-api-client"
# rev = "2edd060c0a515718d62f3a78008b4123a5acefeb"

# NOTE : this patch is because : https://github.com/scs/substrate-api-client/issues/166
[patch."https://github.com/paritytech/substrate.git".frame-metadata]
git = "https://github.com/paritytech/substrate?branch=master"
rev = "558a68f8"

[dependencies.substrate-api-client]
git = "https://github.com/scs/substrate-api-client"
rev = "2e4e313ca5164896eee33d324f8e64ee2a69f476"
# branch = "metadata-v14"
########## end import API Client ##########


########## other imports ##########
[dependencies]
env_logger = { version = "0.7"}
# callgrind = { version = "1.1.0"}
rppal = "0.13.1"

[dependencies.clap]
version = "2.33"
features = ["yaml"]

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate.git"
branch = "master"
package = "sp-core"
default-features = false
features = ["full_crypto"]

[dependencies.keyring]
git = "https://github.com/paritytech/substrate.git"
branch = "master"
package = "sp-keyring"
version = "4.0.0-dev"

[dependencies.node-template-runtime]
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate.git"
branch = "master"
version = "4.0.0-dev"

########## additional for no_std env ##########
[dependencies.libc-print]
version = "0.1.17"

########## binaries ##########
[profile.release]
debug = true

# [target.x86_64-pc-windows-msvc]
# rustflags = ["-C", "target-feature=+crt-static"]

[target.armv7-unknown-linux-gnueabihf]
rustflags = [
	"-C", "link-arg=-undefined",
	"-C", "link-arg=dynamic_lookup",
]


[[bin]]
name = "get_storage"
path = "src/get_storage.rs"

[[bin]]
name = "set_storage"
path = "src/set_storage.rs"

[[bin]]
name = "set_storage_no_std"
path = "src/set_storage_no_std.rs"


# #########################################################
# Static builds add this:
[dependencies.openssl]
version = "0.10"
features = ["vendored"]
# 
# 
# Static instruction before
# sudo apt-get install pkg-config musl-tools
# rustup target add x86_64-unknown-linux-musl
# sudo apt install pkg-config
# cargo build --target x86_64-unknown-linux-musl --release
